WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233961
Web Inspector: evaluateScriptForExtension() incorrectly unwraps internal errors
https://bugs.webkit.org/show_bug.cgi?id=233961
Summary
Web Inspector: evaluateScriptForExtension() incorrectly unwraps internal errors
Blaze Burg
Reported
2021-12-07 16:56:15 PST
Splitting this change from 233935.
Attachments
Patch v1.0
(3.53 KB, patch)
2021-12-07 22:22 PST
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
Patch v1.1 - for landing
(3.53 KB, patch)
2021-12-08 14:55 PST
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2021-12-07 16:58:32 PST
<
rdar://86123763
>
Blaze Burg
Comment 2
2021-12-07 22:22:14 PST
Created
attachment 446299
[details]
Patch v1.0
Patrick Angle
Comment 3
2021-12-08 13:03:56 PST
Comment on
attachment 446299
[details]
Patch v1.0 View in context:
https://bugs.webkit.org/attachment.cgi?id=446299&action=review
r=me
> Source/WebKit/WebProcess/Inspector/WebInspectorUIExtensionController.cpp:255 > + LOG(Inspector, "Internal error encountered while evaluating upon the frontend: at %s:%d:%d: %s", exceptionDetails.sourceURL.utf8().data(), exceptionDetails.lineNumber, exceptionDetails.columnNumber, exceptionDetails.message.utf8().data());
Nit: Odd placement of the first colon IMO... s/`frontend: at`/`frontend at`
Blaze Burg
Comment 4
2021-12-08 14:55:38 PST
Created
attachment 446429
[details]
Patch v1.1 - for landing
EWS
Comment 5
2021-12-08 16:07:12 PST
Committed
r286747
(
244992@main
): <
https://commits.webkit.org/244992@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 446429
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug